added the css in the project

--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JavaScript Stopwatch</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>Stop Watch in JS</header>
     <main>
-      <section id="minutes">00</section>
-      <p>:</p>
-      <section id="seconds">00</section>
-      <button>Start</button>
-      <button>Stop</button>
-      <button>Reset</button>
+      <section id="time">
+        <p id="min">00</p>
+        <p id="temp">:</p>
+        <p id="sec">00</p>
+      </section>
+      <button class="button-accent">Start</button>
+      <button class="button-accent">Stop</button>
+      <button class="button-accent">Reset</button>
     </main>
   </body>
 </html>
