added javascript file

--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -14,9 +14,10 @@
         <p id="temp">:</p>
         <p id="sec">00</p>
       </section>
-      <button class="button-accent">Start</button>
-      <button class="button-accent">Stop</button>
-      <button class="button-accent">Reset</button>
+      <button class="button-accent" onclick="start()">Start</button>
+      <button class="button-accent" onclick="stop()">Stop</button>
+      <button class="button-accent" onclick="reset()">Reset</button>
+      <script src="app.js"></script>
     </main>
   </body>
 </html>
