--- a/digital clock/index.html
+++ b/digital clock/index.html
@@ -3,7 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Digital watch</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>Digital Watch</header>
+    <main>
+      <p>
+        <span id="hour">00</span>
+        :
+        <span id="minute">00</span>
+        :
+        <span id="second">00</span>
+      </p>
+    </main>
+
+    <script src="app.js"></script>
+  </body>
 </html>
