completed the js digital clock css can be improved

--- a/digital clock/index.html
+++ b/digital clock/index.html
@@ -10,11 +10,11 @@
     <header>Digital Watch</header>
     <main>
       <p>
-        <span id="hour">00</span>
-        :
-        <span id="minute">00</span>
-        :
-        <span id="second">00</span>
+        <span class="box-bor" id="hour">00</span>
+        <!-- : -->
+        <span class="box-bor" id="minute">00</span>
+        <!-- : -->
+        <span class="box-bor" id="second">00</span>
       </p>
     </main>
 
