--- a/calculator/index.html
+++ b/calculator/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header><h1>Calculator</h1></header>
+    <header><h1>CALCULATOR</h1></header>
     <main>
       <div class="input" id="input"></div>
       <div class="buttons">
@@ -42,5 +42,6 @@
         <div class="equal" id="result">=</div>
       </div>
     </main>
+    <script src="app.js"></script>
   </body>
 </html>
