completed the project Css can be improved further Js can be optimized further Many functionalities can be added as well like     1. speed scroller     3. canvas size scroller

--- a/canvas game/index.html
+++ b/canvas game/index.html
@@ -10,8 +10,12 @@
     <header>
       <h1>Canvas Game</h1>
     </header>
-    <main class="canvas">
-      <div class="player"></div>
+    <main id="canvas">
+      <!-- hi -->
+      <div id="player"></div>
     </main>
+    <!-- <button onclick="reset()">reset</button>
+    <button onclick="play()">start</button> -->
+    <script src="app.js"></script>
   </body>
 </html>
